crates/ruff_linter/src/rules/flake8_copyright/snapshots/ruff_linter__rules__flake8_copyright__tests__char_boundary.snap
---
source: crates/ruff_linter/src/rules/flake8_copyright/mod.rs
---
[CPY001]: Missing copyright notice at top of file
 --> <filename>:1:1
  |
1 | ককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককককক...
  | ^
  |
