crates/ruff_linter/src/rules/flake8_copyright/snapshots/ruff_linter__rules__flake8_copyright__tests__late_notice.snap
---
source: crates/ruff_linter/src/rules/flake8_copyright/mod.rs
---
[CPY001]: Missing copyright notice at top of file
 --> <filename>:1:1
  |
1 | # Content Content Content Content Content Content Content Content Content Content
  | ^
2 | # Content Content Content Content Content Content Content Content Content Content
3 | # Content Content Content Content Content Content Content Content Content Content
  |
