crates/ruff_linter/src/rules/flake8_copyright/snapshots/ruff_linter__rules__flake8_copyright__tests__valid_author_with_comma_invalid_spaces.snap
---
source: crates/ruff_linter/src/rules/flake8_copyright/mod.rs
---
[CPY001]: Missing copyright notice at top of file
 --> <filename>:1:1
  |
1 | # Copyright (C) 2022 , 2023 Ruff
  | ^
2 |
3 | import os
  |
